Fix invisible button focus on Chrome
In Chrome, a dotted line is not shown around focused buttons like in
Firefox for example. I make focused button text bold with this patch
so there is a way to distinguish them.

--- a/web/include/phpreport.css
+++ b/web/include/phpreport.css
@@ -51,3 +51,7 @@ body {
 #moreactions .x-toolbar {
     border-width: 1px;
 }
+
+.x-btn BUTTON:focus {
+    font-weight: bold;
+}
